--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>v_project</title>
+    <title>接口测试平台（测试开发干货）</title>
+      <style>
+          html,body{
+              height: 100%;
+              margin: 0;
+          }
+      </style>
   </head>
   <body>
     <noscript>
