--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>接口测试平台（测试开发干货）</title>
+    <link rel="icon" href="../static/favicon.ico">
+    <title>接口测试平台</title>
       <style>
           html,body{
               height: 100%;
